feat: Enhance WebSocket communication and add command handling
- Refactored ExtensionWebSocket to support command sending with unique IDs and promise resolution.
- Implemented subscriber pattern for handling incoming messages.
- Added timeout handling for commands to improve reliability.
- Updated content script to utilize new command structure and handle step execution.
- Introduced a new popup interface for managing and executing steps with improved UI.
- Added background script to manage extension window and target tab persistence.
- Created sample scripts for testing step execution.
- Enhanced CSS styles for better user experience in the popup.

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -4,9 +4,10 @@
   "version": "0.0.2",
   "description": "Connects to a local Python API via WebSocket for real-time communication.",
   "action": {
-    "default_title": "Quick WebSocket to Local API",
-    "default_popup": "popup.html"
+    "default_title": "Quick WebSocket to Local API"
   },
+  "background": { "service_worker": "background.js" },
+  "permissions": ["tabs", "storage", "windows"],
   "host_permissions": ["http://127.0.0.1:8000/*", "ws://127.0.0.1:8000/*"],
   "content_scripts": [
     {
